gccida/g2/expand_builtin_setjmp_setup
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_setjmp_setup/src/builtins.c:930:19: error: use of undeclared identifier 'machine_mode'
v4 = force_reg( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v3); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_setjmp_setup/src/builtins.c:932:21: error: use of undeclared identifier 'machine_mode'
v5 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v4); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_setjmp_setup/src/builtins.c:936:21: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v6); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_setjmp_setup/src/builtins.c:938:36: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_fmt_u00( LABEL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), receiver_label); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_setjmp_setup/src/builtins.c:939:19: error: use of undeclared identifier 'machine_mode'
v9 = force_reg( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v8); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_setjmp_setup/src/builtins.c:943:29: error: use of undeclared identifier 'machine_mode'
stack_save = gen_rtx_MEM( ( machine_mode)v2, v11); 
                            ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_setjmp_setup/src/obj/builtins.o] Error 1
